--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<html>
+<head>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+</head>
+<body style="background: #D2232A">
 <h1>Hello World</h1>
+</body>
+</html>
