--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+	<meta name="theme-color" content="#006cb4" id="themeColor">
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+	<link rel="manifest" href="/manifest.json">
 </head>
 <body style="background: #D2232A">
 <h1>Hello World</h1>
