--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-	<meta name="theme-color" content="#006cb4" id="themeColor">
+	<title>Adoos Lite</title>
+	<meta name="theme-color" content="#D2232A" id="themeColor">
+	<link rel="icon" href="https://fede1608.github.io/mobilewebapp-sw-test/icon_adoos_vaquita.png" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0">
 	<link rel="manifest" href="/manifest.json">
 </head>
