--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
-<head>
+<head
 	<title>Adoos Lite</title>
+	<link rel="manifest" href="manifest.json">
 	<meta name="theme-color" content="#D2232A" id="themeColor">
 	<link rel="icon" href="https://fede1608.github.io/mobilewebapp-sw-test/icon_adoos_vaquita.png" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0">
-	<link rel="manifest" href="/manifest.json">
 </head>
 <body style="background: #D2232A">
 <h1>Hello World</h1>
