--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head
+<head>
 	<title>Adoos Lite</title>
 	<link rel="manifest" href="manifest.json">
 	<meta name="theme-color" content="#D2232A" id="themeColor">
