--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 	<meta name="theme-color" content="#D2232A" id="themeColor">
 	<link rel="icon" href="https://fede1608.github.io/mobilewebapp-sw-test/icon_adoos_vaquita.png" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+	 <!--Import Google Icon Font-->
+      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+
+
 </head>
 <body style="background: #D2232A">
-<h1>Hello World</h1>
+	<h1>Adoos Lite</h1>
+	<div class="search-wrapper card">
+            <input id="search"><i class="material-icons">search</i>
+            <div class="search-results"></div>
+          </div>
+	<!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
 </html>
