--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 </head>
 <body style="background: #D2232A">
-	<header>
+  <iframe src="http://adoos.com.cr" width="100%" height="100%"/>
+<!-- 	<header>
       <nav class="top-nav">
         <div class="container">
           <div class="nav-wrapper"><a class="page-title">Adoos Lite</a></div>
@@ -89,7 +90,7 @@
         <li class="bold"><a href="http://materializecss.com/mobile.html" class="waves-effect waves-teal">Mobile</a></li>
         <li class="bold"><a href="showcase.html" class="waves-effect waves-teal">Vitrina</a></li>
       </ul>
-    </header>
+    </header> -->
 	<!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Compiled and minified JavaScript -->
