--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body style="background: #D2232A">
-  <iframe src="http://adoos.com.cr" width="100%" height="100%"/>
+  <iframe src="http://www.adoos.com/" width="100%" height="100%"/>
 <!-- 	<header>
       <nav class="top-nav">
         <div class="container">
